public/content/@ks-qkcp/v3.5/03-installation-and-upgrade/05-add-and-delete-cluster-nodes/02-delete-cluster-nodes.adoc
---
title: "删除集群节点"
keywords: "Kubernetes, {ks_product}, 删除集群节点"
description: "介绍如何删除{ks_product_both}集群节点。"
weight: 02
---

// :ks_include_id: 361623d37b6e4ce58d8e4391a34a07b3
:ks_xref_id: 8ef34423be2649e38f68f8c6795220b0
:ks_comp: ../../../components/
:ks_title: 删除集群节点
:ks_keywords: Kubernetes, {ks_product}, 删除集群节点
:ks_description: 介绍如何删除{ks_product_both}集群节点。
:ks_weight: 02
:ks_icon:


本节介绍如何删除{ks_product_both}集群节点。

节点删除过程中将用到开源工具 KubeKey。有关 KubeKey 的更多信息，请访问 link:https://github.com/kubesphere/kubekey[GitHub KubeKey 仓库]。

// Note
include::../../../../_ks_components/admonitions/note.adoc[]

本节介绍的节点删除方式仅适用于 Kubernetes 通过 KubeKey 安装的场景。如果您的 Kubernetes 不是通过 KubeKey 安装，请参阅 link:https://kubernetes.io/zh/docs/concepts/architecture/nodes/[Kubernetes 官方文档]删除节点。

include::../../../../_ks_components/admonitions/admonEnd.adoc[]

// Warning
include::../../../../_ks_components/admonitions/warning.adoc[]

* 请勿删除控制平面节点，否则集群将出现错误。

* 请确保节点删除后，集群中剩余的资源仍然足够运行现有的业务。否则，节点删除后可能会出现业务中断。

include::../../../../_ks_components/admonitions/admonEnd.adoc[]


== 前提条件link:[id=7159bb0f2c5448bbaaa15dd5d364630d]

* 您需要联系{ks_product_both}的交付服务专家获取{ks_product_left} v3.5.0 安装包。如实施现场条件允许在线拉取公开仓库，具备在线安装条件，可联系 KubeSphere 产品团队获取在线安装文件及相关信息。

:relfileprefix: ../../../

include::../../../_custom/installationAndUpgrade/installationAndUpgrade-prer-obtainConfigSample.adoc[]

:relfileprefix: ./


--
// Warning
include::../../../../_ks_components/admonitions/warning.adoc[]

如果您无法获取安装配置文件 **config-sample.yaml**，您需要参阅link:../../02-install-kubesphere/02-install-kubernetes-and-kubesphere/[安装 Kubernetes 和{ks_product_both}]重新创建 **config-sample.yaml** 文件。重新创建该文件时，请务必确保文件中的集群信息与集群的当前实际情况一致。否则，删除节点后集群可能会出现错误。

include::../../../../_ks_components/admonitions/admonEnd.adoc[]
--


== 操作步骤link:[id=f887db51c0a54ad684238678eeb5cbb5]

ifeval::["{file_output_type}" == "html"]
include::../../../_custom/installationAndUpgrade/installationAndUpgrade-oper-downloadKubekey.adoc[]
endif::[]

ifeval::["{file_output_type}" == "pdf"]
include::../../../_custom/installationAndUpgrade/installationAndUpgrade-oper-decompressInstallationPackage_new.adoc[]
endif::[]

. 执行以下命令查看需要删除的节点的名称：
+
--
// Bash
include::../../../../_ks_components/code/bash.adoc[]

kubectl get node

include::../../../../_ks_components/code/codeEnd.adoc[]
--

. 执行以下命令将需要删除的节点上运行的容器组驱逐到其他节点（将 <node name> 替换为需要删除的节点的名称）：
+
--
// Bash
include::../../../../_ks_components/code/bash.adoc[]

kubectl drain <node name>

include::../../../../_ks_components/code/codeEnd.adoc[]
--

+

include::../../../_custom/installationAndUpgrade/installationAndUpgrade-oper-transferConfig.adoc[]

+

. 执行以下命令开始删除节点：
+
--
// Bash
include::../../../../_ks_components/code/bash.adoc[]

 ./kk delete node <node name> -f config-sample.yaml

include::../../../../_ks_components/code/codeEnd.adoc[]
--

. 执行以下命令查看当前集群节点：
+
--
// Bash
include::../../../../_ks_components/code/bash.adoc[]

kubectl get node

include::../../../../_ks_components/code/codeEnd.adoc[]

如果没有显示已删除节点的信息，则表明节点删除成功。
--